Resolve "Katalog: Beschäftigungsarten (nur BK/SB) Anzeige View"