@@ -8,9 +8,17 @@ import de.svws_nrw.db.dto.current.schild.berufskolleg.DTOBeschaeftigungsart;
 import de.svws_nrw.db.schema.Schema;
 import de.svws_nrw.db.utils.ApiOperationException;
 import jakarta.ws.rs.core.Response.Status;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
+
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 
 /**
@@ -25,7 +33,7 @@ public final class DataBeschaeftigungsarten extends DataManagerRevised<Long, DTO
 	 */
 	public DataBeschaeftigungsarten(final DBEntityManager conn) {
 		super(conn);
-		setAttributesNotPatchable("id");
+		setAttributesNotPatchable("id", "referenziertInAnderenTabellen");
 		setAttributesRequiredOnCreation("bezeichnung");
 	}
 
@@ -41,20 +49,27 @@ public final class DataBeschaeftigungsarten extends DataManagerRevised<Long, DTO
 
 	@Override
 	public Beschaeftigungsart getById(final Long id) throws ApiOperationException {
-		if (id == null)
+		if (id == null) {
 			throw new ApiOperationException(Status.BAD_REQUEST, "Die ID für die Beschäftigungsart darf nicht null sein.");
-
+		}
 		final DTOBeschaeftigungsart dto = conn.queryByKey(DTOBeschaeftigungsart.class, id);
-		if (dto == null)
+		if (dto == null) {
 			throw new ApiOperationException(Status.NOT_FOUND, "Es wurde keine Beschäftigungsart mit der ID %d gefunden.".formatted(id));
-
+		}
 		return map(dto);
 	}
 
 	@Override
 	public List<Beschaeftigungsart> getAll() {
-		final List<DTOBeschaeftigungsart> result = this.conn.queryAll(DTOBeschaeftigungsart.class);
-		return result.stream().map(this::map).toList();
+		final List<DTOBeschaeftigungsart> beschaeftigungsarten = this.conn.queryAll(DTOBeschaeftigungsart.class);
+		final Set<Long> idsOfReferencedBeschaeftigungsarten = this.getIdsOfReferencedBeschaeftigungsarten(mapToIds(beschaeftigungsarten));
+
+		return beschaeftigungsarten
+				.stream()
+				.map(this::map)
+				.map(f -> setReferenceFlag(f, idsOfReferencedBeschaeftigungsarten))
+				.sorted(Comparator.comparing(f -> f.id))
+				.toList();
 	}
 
 	@Override
@@ -62,9 +77,8 @@ public final class DataBeschaeftigungsarten extends DataManagerRevised<Long, DTO
 		final Beschaeftigungsart beschaeftigungsart = new Beschaeftigungsart();
 		beschaeftigungsart.id = dto.ID;
 		beschaeftigungsart.bezeichnung = dto.Bezeichnung;
-		beschaeftigungsart.sortierung = (dto.Sortierung == null) ? 32000 : dto.Sortierung;
-		beschaeftigungsart.istSichtbar = (dto.Sichtbar == null) || dto.Sichtbar;
-		beschaeftigungsart.istAenderbar = (dto.Aenderbar == null) || dto.Aenderbar;
+		beschaeftigungsart.istSichtbar = Boolean.TRUE.equals(dto.Sichtbar);
+		beschaeftigungsart.sortierung = Objects.requireNonNullElse(dto.Sortierung, 32000);
 		return beschaeftigungsart;
 	}
 
@@ -72,31 +86,63 @@ public final class DataBeschaeftigungsarten extends DataManagerRevised<Long, DTO
 	protected void mapAttribute(final DTOBeschaeftigungsart dto, final String name, final Object value, final Map<String, Object> map)
 			throws ApiOperationException {
 		switch (name) {
-			case "id" -> {
-				final Long id = JSONMapper.convertToLong(value, false, name);
-				if (!Objects.equals(dto.ID, id))
-					throw new ApiOperationException(Status.BAD_REQUEST,
-							"Die ID %d des Patches ist null oder stimmt nicht mit der ID %d in der Datenbank überein.".formatted(id, dto.ID));
-			}
-			case "bezeichnung" -> updateBezeichnung(dto, value, name);
+			case "id" -> validateId(dto, name, value);
+			case "bezeichnung" -> validateBezeichnung(dto, value, name);
 			case "sortierung" -> dto.Sortierung = JSONMapper.convertToInteger(value, true, name);
 			case "istSichtbar" -> dto.Sichtbar = JSONMapper.convertToBoolean(value, true, name);
-			case "istAenderbar" -> dto.Aenderbar = JSONMapper.convertToBoolean(value, true, name);
 			default -> throw new ApiOperationException(Status.BAD_REQUEST, "Die Daten des Patches enthalten das unbekannte Attribut %s.".formatted(name));
 		}
 	}
 
-	private void updateBezeichnung(final DTOBeschaeftigungsart dto, final Object value, final String name) throws ApiOperationException {
+	private static void validateId(final DTOBeschaeftigungsart dto, final String name, final Object value) throws ApiOperationException {
+		final Long id = JSONMapper.convertToLong(value, false, name);
+		if (!Objects.equals(dto.ID, id)) {
+			throw new ApiOperationException(Status.BAD_REQUEST,
+					"Die ID %d des Patches ist null oder stimmt nicht mit der ID %d in der Datenbank überein.".formatted(id, dto.ID));
+		}
+	}
+
+	private void validateBezeichnung(final DTOBeschaeftigungsart dto, final Object value, final String name) throws ApiOperationException {
 		final String bezeichnung = JSONMapper.convertToString(
 				value, false, false, Schema.tab_K_BeschaeftigungsArt.col_Bezeichnung.datenlaenge(), name);
-		if (Objects.equals(dto.Bezeichnung, bezeichnung) || bezeichnung.isBlank())
+		if (StringUtils.isBlank(bezeichnung) || Strings.CS.equals(dto.Bezeichnung, bezeichnung)) {
 			return;
-
-		final boolean bezeichnungAlreadyUsed = this.conn.queryAll(DTOBeschaeftigungsart.class).stream()
-				.anyMatch(b -> (b.ID != dto.ID) && bezeichnung.equalsIgnoreCase(b.Bezeichnung));
-		if (bezeichnungAlreadyUsed)
-			throw new ApiOperationException(Status.BAD_REQUEST, "Die Bezeichnung %s ist bereits vorhanden.".formatted(bezeichnung));
-
+		}
+		validateBezeichnungIsUnique(bezeichnung);
 		dto.Bezeichnung = bezeichnung;
+	}
+
+	private void validateBezeichnungIsUnique(final String bezeichnung) throws ApiOperationException {
+		final boolean bezeichnungAlreadyUsed = this.conn
+				.queryAll(DTOBeschaeftigungsart.class)
+				.stream()
+				.anyMatch(h -> Strings.CI.equals(bezeichnung, h.Bezeichnung));
+		if (bezeichnungAlreadyUsed) {
+			throw new ApiOperationException(Status.BAD_REQUEST, "Die Bezeichnung %s ist bereits vorhanden.".formatted(bezeichnung));
+		}
+	}
+
+	private Set<Long> getIdsOfReferencedBeschaeftigungsarten(final Set<Long> ids) {
+		if ((ids == null) || ids.isEmpty()) {
+			return Collections.emptySet();
+		}
+		final String query = "SELECT DISTINCT a.Vertragsart_ID FROM DTOSchuelerAllgemeineAdresse a WHERE a.Vertragsart_ID IN :ids";
+		final List<Long> results = this.conn
+				.query(query, Long.class)
+				.setParameter("ids", ids)
+				.getResultList();
+		return new HashSet<>(results);
+	}
+
+	private static Set<Long> mapToIds(final List<DTOBeschaeftigungsart> beschaeftigungsarten) {
+		return beschaeftigungsarten
+				.stream()
+				.map(f -> f.ID)
+				.collect(Collectors.toSet());
+	}
+
+	private static Beschaeftigungsart setReferenceFlag(final Beschaeftigungsart beschaeftigungsart, final Set<Long> idsOfReferencedBeschaeftigungsarten) {
+		beschaeftigungsart.referenziertInAnderenTabellen = idsOfReferencedBeschaeftigungsarten.contains(beschaeftigungsart.id);
+		return beschaeftigungsart;
 	}
 }
